--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 </head>
 <body>
-
+    <div class="container">
+        <h1 class="turn"></div>
+        <div class="board"></div>
+        <h1 class="result"></div>
+      </div>
     <script type="text/javascript" src="game.js"></script>
 </body>
 </html>
